Added Sig Generator

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ layout: default
     {% endfor %}
   </ul> -->
 
-  <h1>This is a repostitory for random public pages for <a href="www.sharedit.com">Shared IT, Inc.</a></h1>
+  <h1>This is a repostitory for random public pages for <a href="http://www.sharedit.com">Shared IT, Inc.</a></h1>
 
   <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
 
