--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
 
 
   <section>
-    <h1>This is a repostitory for random public pages for <a href="http://www.sharedit.com">Shared IT, Inc.</a></h1>
+    <h1>This is a repostitory for public pages for <a href="http://www.sharedit.com">Shared IT, Inc.</a></h1>
   </section>
 
   <ul>
