--- a/_posts/2016-02-29-SharedIT-Demo.html
+++ b/_posts/2016-02-29-SharedIT-Demo.html
@@ -20,4 +20,9 @@ permalink: /SharedIT/
   <h2 class="sharedit-sub-title">Providing IT Leadership to Small and Mid-Size Companies</h2>
   <div class="hero-cta">contact us</div>
 </section>
-section
+<section class="sharedit-cio">
+  <div class="cio-left">Your company nees a Chief Information Technology Officer - C.I.O.</div><div class="cio-right"><i class="fa fa-black-tie fa-3x"></i></div>
+  <div class="cio-left">Our C.I.O agreements can be a few hours a month to full-time</div><div class="cio-right"><i class="fa fa-clock-o fa-3x"></i></div>
+  <div class="cio-left">We work for small to large businesses - supporting 10 computers to hundreds</div><div class="cio-right"><i class="fa fa-building-o"></i><i class="fa fa-building-o fa-2x"></i><i class="fa fa-building-o fa-3x"></i></div>
+  <div class="cio-left">We work for service, manufacturing, and healthcare compaines</div><div class="cio-right"><i class="fa fa-truck fa-3x"></i><i class="fa fa-user-md fa-3x"></i><i class="fa fa-building-o fa-3x"></i></div>
+</section>
